[package]
name = "msl"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
rson_rs = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
semver = "0.10.0"
thiserror = "1.0"
regex = "1.0"
syn = "1.0"
quote = "1.0"